--- a/app/src/main/res/layout/layout_pwdfind.xml
+++ b/app/src/main/res/layout/layout_pwdfind.xml
@@ -57,7 +57,7 @@
 
             <TextView
                 android:id="@+id/txt_pwd"
-                android:layout_width="match_parent"
+                android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="10dp"
